overflow fix

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -201,7 +201,7 @@ html, body
   //position relative
   width 100%
   height 100%
-  overflow hidden
+  //overflow hidden
   > .list 
     //position relative
     display grid
